--- a/cifar10_tfx/tfx_workshop.ipynb
+++ b/cifar10_tfx/tfx_workshop.ipynb
@@ -58,14 +58,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "<img src=\"assets/tfx_workflow.png\" alt=\"TFX Component\" style=\"height: 1080px; width:1900px;\"/>\n"
+    "<img src=\"./assets/tfx_workflow.png\" alt=\"TFX Component\" style=\"height: 1080px; width:1900px;\"/>\n"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "<img src=\"assets/tfx_libraries.png\" alt=\"TFX Libraries\" style=\"height: 900px; width:1900px;\"/>\n"
+    "<img src=\"./assets/tfx_libraries.png\" alt=\"TFX Libraries\" style=\"height: 900px; width:1900px;\"/>\n"
    ],
    "metadata": {}
   },
