Add TFX workshop notebook docs

--- a/cifar10_tfx/tfx_workshop.ipynb
+++ b/cifar10_tfx/tfx_workshop.ipynb
@@ -18,8 +18,8 @@
     "4. Have an idea of how to deploy models using Tensorflow Serving.\n",
     "\n",
     "This workshop is divided into three sections:\n",
-    "1. TFX: Understanding basic TFX component and TFX pipeline - To be executed on Google Colab.\n",
-    "2. Optional: TFX Orchestration using Apache Airflow - To be executed on local environment.\n",
+    "1. TFX: Understanding basic TFX component using interactive environment.\n",
+    "2. TFX Pipeline Orchestration using: Local and Apache Airflow (optional).\n",
     "3. Model deployment: Flask and Tensorflow Serving\n",
     "\n",
     "Reference: https://www.tensorflow.org/tfx"
@@ -51,28 +51,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# TFX"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "<img src=\"./assets/tfx_workflow.png\" alt=\"TFX Component\" style=\"height: 1080px; width:1900px;\"/>\n"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "<img src=\"./assets/tfx_libraries.png\" alt=\"TFX Libraries\" style=\"height: 900px; width:1900px;\"/>\n"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Interactive Orchestration\n",
+    "# TFX Components: Interactive Orchestration\n",
     "\n",
     "### Background\n",
     "This notebook demonstrates how to use TFX in a Jupyter/Colab environment. Here, we walk through the Chicago Taxi example in an interactive notebook.\n",
@@ -86,6 +65,20 @@
     "In a production deployment of TFX, you will access metadata through the ML Metadata (MLMD) API. MLMD stores metadata properties in a database such as MySQL or SQLite, and stores the metadata payloads in a persistent store such as on your filesystem. In an interactive notebook, both properties and payloads are stored in an ephemeral SQLite database in the /tmp directory on the Jupyter notebook or Colab server.\n",
     "\n",
     "Adapted from: https://www.tensorflow.org/tfx/tutorials/tfx/components_keras"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<img src=\"./assets/tfx_workflow.png\" alt=\"TFX Component\" height=\"1080\" width=\"1900px\"/>\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<img src=\"./assets/tfx_libraries.png\" alt=\"TFX Libraries\" height=\"900\" width=\"1900px\"/>\n"
    ],
    "metadata": {}
   },
@@ -440,7 +433,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Create the TFX pipeline"
+    "# TFX Pipeline Orchestration"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## TFX Pipeline Stitching"
    ],
    "metadata": {}
   },
