fix transform exploration code

--- a/cifar10_tfx/tfx_workshop.ipynb
+++ b/cifar10_tfx/tfx_workshop.ipynb
@@ -30,12 +30,12 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Run this cell to setup TFX on Google Colab\n",
-    "try:\n",
-    "  import colab\n",
-    "  !pip install --upgrade pip\n",
-    "  !pip install -U tfx\n",
-    "except:\n",
+    "# Run this cell to setup TFX on Google Colab\r\n",
+    "try:\r\n",
+    "  import colab\r\n",
+    "  !pip install --upgrade pip\r\n",
+    "  !pip install -U tfx\r\n",
+    "except:\r\n",
     "  pass"
    ],
    "outputs": [],
@@ -86,22 +86,22 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "import os\n",
-    "import tensorflow as tf\n",
-    "from typing import List\n",
-    "from tfx import v1 as tfx\n",
-    "\n",
-    "from tfx.components import ImportExampleGen\n",
-    "from tfx.components import Pusher\n",
-    "from tfx.components import SchemaGen\n",
-    "from tfx.components import StatisticsGen\n",
-    "from tfx.components import Trainer\n",
-    "from tfx.components import Transform\n",
-    "from tfx.orchestration import metadata\n",
-    "from tfx.orchestration import pipeline\n",
-    "from tfx.proto import example_gen_pb2\n",
-    "from tfx.proto import pusher_pb2\n",
-    "from tfx.proto import trainer_pb2\n",
+    "import os\r\n",
+    "import tensorflow as tf\r\n",
+    "from typing import List\r\n",
+    "from tfx import v1 as tfx\r\n",
+    "\r\n",
+    "from tfx.components import ImportExampleGen\r\n",
+    "from tfx.components import Pusher\r\n",
+    "from tfx.components import SchemaGen\r\n",
+    "from tfx.components import StatisticsGen\r\n",
+    "from tfx.components import Trainer\r\n",
+    "from tfx.components import Transform\r\n",
+    "from tfx.orchestration import metadata\r\n",
+    "from tfx.orchestration import pipeline\r\n",
+    "from tfx.proto import example_gen_pb2\r\n",
+    "from tfx.proto import pusher_pb2\r\n",
+    "from tfx.proto import trainer_pb2\r\n",
     "from tfx.orchestration.experimental.interactive.interactive_context import InteractiveContext"
    ],
    "outputs": [],
@@ -118,7 +118,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "print('TensorFlow version: {}'.format(tf.__version__))\n",
+    "print('TensorFlow version: {}'.format(tf.__version__))\r\n",
     "print('TFX version: {}'.format(tfx.__version__))"
    ],
    "outputs": [],
@@ -135,18 +135,18 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "_pipeline_name = \"cifar10-tfx\"\n",
-    "\n",
-    "_pipeline_root = os.path.join('pipelines', _pipeline_name)\n",
-    "_data_root = \"data\"\n",
-    "_serving_model_dir = os.path.join('serving_model', _pipeline_name)\n",
-    "_labels_path = os.path.join(_data_root, 'labels.txt')\n",
-    "\n",
-    "_trainer_module_file = \"cifar10_trainer.py\"\n",
-    "_transform_module_file = \"cifar10_transform.py\"\n",
-    "\n",
-    "# Will be used later for TFX pipeline\n",
-    "_metadata_path = os.path.join('metadata', _pipeline_name, 'metadata.db')\n"
+    "_pipeline_name = \"cifar10-tfx\"\r\n",
+    "\r\n",
+    "_pipeline_root = os.path.join('pipelines', _pipeline_name)\r\n",
+    "_data_root = \"data\"\r\n",
+    "_serving_model_dir = os.path.join('serving_model', _pipeline_name)\r\n",
+    "_labels_path = os.path.join(_data_root, 'labels.txt')\r\n",
+    "\r\n",
+    "_trainer_module_file = \"cifar10_trainer.py\"\r\n",
+    "_transform_module_file = \"cifar10_transform.py\"\r\n",
+    "\r\n",
+    "# Will be used later for TFX pipeline\r\n",
+    "_metadata_path = os.path.join('metadata', _pipeline_name, 'metadata.db')\r\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -189,13 +189,13 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "input_config = example_gen_pb2.Input(splits=[\n",
-    "    example_gen_pb2.Input.Split(name='train', pattern='train/*'),\n",
-    "    example_gen_pb2.Input.Split(name='eval', pattern='test/*')\n",
-    "])\n",
-    "example_gen = ImportExampleGen(input_base=_data_root,\n",
-    "                               input_config=input_config)\n",
-    "\n",
+    "input_config = example_gen_pb2.Input(splits=[\r\n",
+    "    example_gen_pb2.Input.Split(name='train', pattern='train/*'),\r\n",
+    "    example_gen_pb2.Input.Split(name='eval', pattern='test/*')\r\n",
+    "])\r\n",
+    "example_gen = ImportExampleGen(input_base=_data_root,\r\n",
+    "                               input_config=input_config)\r\n",
+    "\r\n",
     "context.run(example_gen)"
    ],
    "outputs": [],
@@ -205,7 +205,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "artifact = example_gen.outputs['examples'].get()[0]\n",
+    "artifact = example_gen.outputs['examples'].get()[0]\r\n",
     "print(artifact.split_names, artifact.uri)"
    ],
    "outputs": [],
@@ -230,8 +230,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "statistics_gen = StatisticsGen(examples=example_gen.outputs['examples'])\n",
-    "\n",
+    "statistics_gen = StatisticsGen(examples=example_gen.outputs['examples'])\r\n",
+    "\r\n",
     "context.run(statistics_gen)"
    ],
    "outputs": [],
@@ -257,9 +257,9 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "schema_gen = SchemaGen(statistics=statistics_gen.outputs['statistics'],\n",
-    "                           infer_feature_shape=True)\n",
-    "\n",
+    "schema_gen = SchemaGen(statistics=statistics_gen.outputs['statistics'],\r\n",
+    "                           infer_feature_shape=True)\r\n",
+    "\r\n",
     "context.run(schema_gen)"
    ],
    "outputs": [],
@@ -290,10 +290,10 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "transform = Transform(examples=example_gen.outputs['examples'],\n",
-    "                      schema=schema_gen.outputs['schema'],\n",
-    "                      module_file=_transform_module_file)\n",
-    "\n",
+    "transform = Transform(examples=example_gen.outputs['examples'],\r\n",
+    "                      schema=schema_gen.outputs['schema'],\r\n",
+    "                      module_file=_transform_module_file)\r\n",
+    "\r\n",
     "context.run(transform)"
    ],
    "outputs": [],
@@ -313,7 +313,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "train_uri = transform.outputs['transform_graph'].get()[0].uri\n",
+    "train_uri = transform.outputs['transform_graph'].get()[0].uri\r\n",
     "os.listdir(train_uri)"
    ],
    "outputs": [],
@@ -323,20 +323,23 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Get the URI of the output artifact representing the transformed examples, which is a directory\n",
-    "    _create_pipeline(pipeline_name=_pipeline_name,\n",
-    "                     pipeline_root=_pipeline_root,\n",
-    "                     data_root=_data_root,\n",
-    "                     transform_module_file=_transform_module_file,\n",
-    "                     trainer_module_file=_trainer_module_file,\n",
-    "                     serving_model_dir=_serving_model_dir,\n",
-    "                     metadata_path=_metadata_path,\n",
-    "                     labels_path=_labels_path))\n",
-    "# Iterate over the first 3 records and decode them.\n",
-    "for tfrecord in dataset.take(1):\n",
-    "  serialized_example = tfrecord.numpy()\n",
-    "  example = tf.train.Example()\n",
-    "  example.ParseFromString(serialized_example)\n",
+    "# Get the URI of the output artifact representing the transformed examples, which is a directory\r\n",
+    "# Get the URI of the output artifact representing the transformed examples, which is a directory\r\n",
+    "train_uri = os.path.join(transform.outputs['transformed_examples'].get()[0].uri, 'Split-train')\r\n",
+    "\r\n",
+    "# Get the list of files in this directory (all compressed TFRecord files)\r\n",
+    "tfrecord_filenames = [os.path.join(train_uri, name)\r\n",
+    "                      for name in os.listdir(train_uri)]\r\n",
+    "\r\n",
+    "# Create a `TFRecordDataset` to read these files\r\n",
+    "dataset = tf.data.TFRecordDataset(tfrecord_filenames, compression_type=\"GZIP\")\r\n",
+    "\r\n",
+    "# Doesn't work on Colab with default params\r\n",
+    "# Iterate over the first record and decode them.\r\n",
+    "for tfrecord in dataset.take(1):\r\n",
+    "  serialized_example = tfrecord.numpy()\r\n",
+    "  example = tf.train.Example()\r\n",
+    "  example.ParseFromString(serialized_example)\r\n",
     "  print(example)"
    ],
    "outputs": [],
@@ -368,13 +371,13 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "trainer = Trainer(module_file=_trainer_module_file,\n",
-    "                  examples=transform.outputs['transformed_examples'],\n",
-    "                  transform_graph=transform.outputs['transform_graph'],\n",
-    "                  schema=schema_gen.outputs['schema'],\n",
-    "                  train_args=trainer_pb2.TrainArgs(num_steps=160),\n",
-    "                  eval_args=trainer_pb2.EvalArgs(num_steps=4),\n",
-    "                  custom_config={'labels_path': _labels_path})\n",
+    "trainer = Trainer(module_file=_trainer_module_file,\r\n",
+    "                  examples=transform.outputs['transformed_examples'],\r\n",
+    "                  transform_graph=transform.outputs['transform_graph'],\r\n",
+    "                  schema=schema_gen.outputs['schema'],\r\n",
+    "                  train_args=trainer_pb2.TrainArgs(num_steps=160),\r\n",
+    "                  eval_args=trainer_pb2.EvalArgs(num_steps=4),\r\n",
+    "                  custom_config={'labels_path': _labels_path})\r\n",
     "context.run(trainer)"
    ],
    "outputs": [],
